--- a/descriptors/ubuntu_4vdu_day2_monparam/ubuntu_4vdu_day2_monparam_vnf/ubuntu_4vdu_day2_monparam.yaml
+++ b/descriptors/ubuntu_4vdu_day2_monparam/ubuntu_4vdu_day2_monparam_vnf/ubuntu_4vdu_day2_monparam.yaml
@@ -65,12 +65,12 @@ vnfd:vnfd-catalog:
             cloud-init-file: cloud-config.txt
         -   id: dataVM
             name: dataVM
-            image: bionic-cloud
+            image: cirros_with_pw
             count: '1'
             vm-flavor:
                 vcpu-count: '1'
-                memory-mb: '350'
-                storage-gb: '5'
+                memory-mb: '64'
+                storage-gb: '1'
             interface:
             -   name: dataVM-eth0
                 position: '1'
