--- a/img_gen/local.2intf.conf
+++ b/img_gen/local.2intf.conf
@@ -41,7 +41,7 @@ SERVICE_PASSWORD=$ADMIN_PASSWORD
 #HOST_IP=w.x.y.z
 #HOST_IPV6=2001:db8::7
 
-PUBLIC_INTERFACE=ens4
+PUBLIC_INTERFACE=ens9
 
 # The home network range
 FLOATING_RANGE=192.168.130.0/24
@@ -53,7 +53,7 @@ PUBLIC_NETWORK_GATEWAY=192.168.130.2
 Q_FLOATING_ALLOCATION_POOL=start=192.168.130.210,end=192.168.130.254
 
 # Enable ceilometer and gnocchi
-enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer.git
+enable_plugin ceilometer https://git.openstack.org/openstack/ceilometer.git stable/ussuri
 CEILOMETER_BACKEND=gnocchi
 
 # Logging
